Commit style header

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 
-@import "/sass/communElements/variables.scss";
+@import "./communElements/variables.scss";
 
-@import "/sass/communElements/communElements.scss";
+@import "./communElements/communElements.scss";
 
-@import "/sass/pages/home.scss";
+@import "./pages/home.scss";
 
-@import "/sass/pages/falcon9.scss";
+@import "./pages/falcon9.scss";
 
-@import "/sass/pages/humanSpace.scss";
+@import "./pages/humanSpace.scss";
