--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,11 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 3 | @import "/sass/communElements/variables.scss";
- *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   sass/style.scss 3:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 3 \2502  @import \"/sass/communElements/variables.scss\";\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass/style.scss 3:9  root stylesheet";
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
+* {
+  color: #fff;
 }
+
+.header {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+/*# sourceMappingURL=style.css.map */
