Commit style logoPc

--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,10 @@
   margin-top: 5px;
 }
 
+.logoPc {
+  width: 240px;
+  margin-left: -10px;
+  margin-right: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
