--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,17 @@
   margin-right: 20px;
 }
 
+.container00.container01 {
+  background-image: url(../../images/home/01.jpg);
+}
+.container00.container02 {
+  background-image: url(../../images/home/02.gif);
+}
+.container00.container03 {
+  background-image: url(../../images/home/03.jpg);
+}
+.container00.container04 {
+  background-image: url(../../images/home/04.jpg);
+}
+
 /*# sourceMappingURL=style.css.map */
