--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -4,14 +4,28 @@
     }
 
     &.container02 {
-        background-image: url(../../images/home/02.gif);
+        background-image: url(../../images/home/03.jpg);
     }
 
     &.container03 {
-        background-image: url(../../images/home/03.jpg);
+        background-image: url(../../images/home/02.gif);
     }
 
     &.container04 {
         background-image: url(../../images/home/04.jpg);
     }
+}
+
+.titlePadding {
+    padding-top: 200px;
+}
+
+.shortTitle {
+    width: 550px;
+    margin-bottom: -25px;
+}
+
+.mediumTitle {
+    width: 650px;
+    margin-bottom: -25px;
 }
