--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,15 @@
   color: #555252;
 }
 
+@media (max-width: 405px) {
+  .logoPc {
+    width: 180px;
+    margin-top: 15px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+}
 .container00.container01 {
   background-image: url(../../images/home/01.jpg);
 }
