--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,12 @@
     font-size: 10px;
   }
 }
+@media (max-width: 350px) {
+  .logoPc {
+    width: 150px;
+    margin-top: 15px;
+  }
+}
 .container00.container01 {
   background-image: url(../../images/home/01.jpg);
 }
