--- a/css/style.css
+++ b/css/style.css
@@ -96,4 +96,15 @@
   margin-bottom: -25px;
 }
 
+@media (max-width: 750px) {
+  .titlePadding {
+    padding-top: 120px;
+  }
+  .shortTitle,
+  .mediumTitle {
+    width: auto;
+    font-size: 50px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
