--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -29,3 +29,15 @@
     width: 650px;
     margin-bottom: -25px;
 }
+
+@media (max-width: 750px) {
+    .titlePadding {
+        padding-top: 120px;
+    }
+
+    .shortTitle,
+    .mediumTitle {
+        width: auto;
+        font-size: 50px;
+    }
+}
