--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -19,7 +19,7 @@
 .arrowDown {
     display: inline-block;
     width: 90px;
-    margin-top: 5px;
+    margin-top: 60px;
 }
 
 .logoPc {
@@ -30,6 +30,7 @@
 
 #button {
     padding: $padding-button;
+    border: 2px solid #fff;
 }
 
 .footer {
