--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -22,15 +22,15 @@
 
 .shortTitle {
     width: 550px;
-    margin-bottom: -25px;
+    margin-bottom: 15px;
 }
 
 .mediumTitle {
     width: 650px;
-    margin-bottom: -25px;
+    margin-bottom: 15px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 760px) {
     .titlePadding {
         padding-top: 120px;
     }
@@ -38,6 +38,14 @@
     .shortTitle,
     .mediumTitle {
         width: auto;
-        font-size: 50px;
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 380px) {
+    .shortTitle,
+    .mediumTitle {
+        width: auto;
+        font-size: 32px;
     }
 }
