--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@
   color: #555252;
 }
 
+@media (max-width: 449px) {
+  .downloadDesc button {
+    margin: 10px 0;
+  }
+}
 @media (max-width: 405px) {
   .logoPc {
     width: 180px;
@@ -71,16 +76,16 @@
   }
 }
 .container00.container01 {
-  background-image: url(../../images/home/01.jpg);
+  background-image: url(../images/home/01.jpg);
 }
 .container00.container02 {
-  background-image: url(../../images/home/03.jpg);
+  background-image: url(../images/home/03.jpg);
 }
 .container00.container03 {
-  background-image: url(../../images/home/02.gif);
+  background-image: url(../images/home/02.gif);
 }
 .container00.container04 {
-  background-image: url(../../images/home/04.jpg);
+  background-image: url(../images/home/04.jpg);
 }
 
 .titlePadding {
@@ -112,6 +117,143 @@
   .mediumTitle {
     width: auto;
     font-size: 32px;
+  }
+}
+.container00.container05 {
+  background-image: url(../images/falcon9/01.jpg);
+}
+.container00.container06 {
+  background-image: url(../images/falcon9/02.jpg);
+}
+.container00.carrosel01 {
+  background-image: url(../images/falcon9/03.jpg);
+}
+.container00.carrosel02 {
+  background-image: url(../images/falcon9/04.jpg);
+}
+.container00.carrosel03 {
+  background-image: url(../images/falcon9/05.jpg);
+}
+.container00.carrosel04 {
+  background-image: url(../images/falcon9/06.jpg);
+}
+.container00.carrosel05 {
+  background-image: url(../../images/falcon9/07.jpg);
+}
+.container00.container07 {
+  background-image: url(../../images/falcon9/08.jpg);
+}
+
+.titleContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80vh;
+}
+.titleContent .titleFalcon9 {
+  font-size: 90px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+}
+
+.numbers {
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #000;
+}
+.numbers .titleNumb {
+  font-size: 90px;
+}
+.numbers .subTitleNumb {
+  font-size: 20px;
+}
+
+.containerFalcon9Desc {
+  display: grid;
+  height: 90vh;
+  justify-content: left;
+  align-items: center;
+}
+.containerFalcon9Desc .falcon9Desc {
+  font-size: 22px;
+  width: 640px;
+  line-height: 50px;
+}
+
+#overViewPosition {
+  width: 500px;
+  margin-left: 13%;
+  padding-top: 15%;
+}
+
+.carrosselSlide img {
+  height: 100vh;
+}
+
+.downloadDesc {
+  background-color: #000;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc a {
+  text-decoration: none;
+  color: #555252;
+}
+.downloadDesc a:hover {
+  color: #b9b9b9;
+}
+.downloadDesc button {
+  border: 2px solid #fff;
+  margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .numbers .titleNumb {
+    font-size: 80px;
+  }
+  .numbers .subTitleNumb {
+    font-size: 18px;
+  }
+  .containerFalcon9Desc .falcon9Desc {
+    width: auto;
+  }
+  #overViewPosition {
+    padding-top: 35%;
+  }
+}
+@media (max-width: 575px) {
+  .numbers {
+    height: 60vh;
+  }
+  .numbers .titleNumb {
+    font-size: 50px;
+  }
+  .numbers .subTitleNumb {
+    font-size: 16px;
+  }
+  #overViewPosition {
+    width: auto;
+    margin-left: auto;
+  }
+}
+@media (max-width: 465px) {
+  .titleContent .titleFalcon9 {
+    font-size: 50px;
+  }
+  .titleContent .subTitleFalcon9 {
+    font-size: 18px;
+  }
+  .containerFalcon9Desc .falcon9Desc {
+    font-size: 20px;
+    line-height: auto;
+  }
+}
+@media (max-width: 375px) {
+  .containerFalcon9Desc .falcon9Desc {
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
