--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,24 @@
   color: #555252;
 }
 
+.downloadDesc {
+  background-color: #000;
+  height: 85vh;
+  padding-top: 240px;
+}
+.downloadDesc button {
+  border: 2px solid #fff;
+  margin-right: 10px;
+}
+
+.emailObc {
+  text-decoration: none;
+  color: #555252;
+}
+.emailObc:hover {
+  color: #b9b9b9;
+}
+
 @media (max-width: 449px) {
   .downloadDesc button {
     margin: 10px 0;
@@ -76,16 +94,16 @@
   }
 }
 .container00.container01 {
-  background-image: url(../images/home/01.jpg);
+  background-image: url(../../images/home/01.jpg);
 }
 .container00.container02 {
-  background-image: url(../images/home/03.jpg);
+  background-image: url(../../images/home/03.jpg);
 }
 .container00.container03 {
-  background-image: url(../images/home/02.gif);
+  background-image: url(../../images/home/02.gif);
 }
 .container00.container04 {
-  background-image: url(../images/home/04.jpg);
+  background-image: url(../../images/home/04.jpg);
 }
 
 .titlePadding {
@@ -120,22 +138,22 @@
   }
 }
 .container00.container05 {
-  background-image: url(../images/falcon9/01.jpg);
+  background-image: url(../../images/falcon9/01.jpg);
 }
 .container00.container06 {
-  background-image: url(../images/falcon9/02.jpg);
+  background-image: url(../../images/falcon9/02.jpg);
 }
 .container00.carrosel01 {
-  background-image: url(../images/falcon9/03.jpg);
+  background-image: url(../../images/falcon9/03.jpg);
 }
 .container00.carrosel02 {
-  background-image: url(../images/falcon9/04.jpg);
+  background-image: url(../../images/falcon9/04.jpg);
 }
 .container00.carrosel03 {
-  background-image: url(../images/falcon9/05.jpg);
+  background-image: url(../../images/falcon9/05.jpg);
 }
 .container00.carrosel04 {
-  background-image: url(../images/falcon9/06.jpg);
+  background-image: url(../../images/falcon9/06.jpg);
 }
 .container00.carrosel05 {
   background-image: url(../../images/falcon9/07.jpg);
@@ -254,6 +272,117 @@
   .containerFalcon9Desc .falcon9Desc {
     font-size: 18px;
     line-height: 30px;
+  }
+}
+.container00.container08 {
+  background-image: url(../../images/humanFlight/01.jpg);
+}
+.container00.container09 {
+  background-image: url(../../images/humanFlight/02.jpg);
+}
+.container00.container10 {
+  background-image: url(../../images/humanFlight/03.jpg);
+}
+.container00.container11 {
+  background-image: url(../../images/humanFlight/04.jpg);
+}
+.container00.container12 {
+  background-image: url(../../images/humanFlight/05.jpg);
+}
+
+.container01Content {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container01Content .titleHuman {
+  font-size: 120px;
+  font-weight: 500;
+  line-height: normal;
+}
+.container01Content .subTitleHuman {
+  margin-top: 10px;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.earthDesc {
+  background-color: #000;
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.earthDesc .textDescEarht {
+  color: #d8d8d8;
+  font-weight: 400;
+  font-size: 20px;
+  width: 800px;
+}
+
+.containerRightContent {
+  margin-left: 55%;
+  padding-top: 15%;
+}
+
+.containerLeftContent {
+  margin-left: 5%;
+  padding-top: 15%;
+}
+
+.titleSection {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.subTitle {
+  font-weight: 300;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 768px) {
+  .container01Content .titleHuman {
+    font-size: 90px;
+  }
+  .container01Content img {
+    width: 150px;
+  }
+  .containerRightContent {
+    margin-left: 15%;
+  }
+  .containerLeftContent {
+    margin-left: 15%;
+  }
+  .earthDesc .textDescEarht {
+    font-size: 18px;
+    width: auto;
+  }
+}
+@media (max-width: 600px) {
+  .container01Content .titleHuman {
+    font-size: 60px;
+  }
+  .container01Content .subTitleHuman {
+    font-size: 24px;
+  }
+  .containerRightContent {
+    margin-left: 5%;
+  }
+  .containerLeftContent {
+    margin-left: 5%;
+  }
+  .titleSection {
+    font-size: 40px;
+  }
+}
+@media (max-width: 430px) {
+  .container01Content .titleHuman {
+    font-size: 40px;
+  }
+  .container01Content img {
+    width: 100px;
   }
 }
 
