--- a/sass/communElements/communElements.scss
+++ b/sass/communElements/communElements.scss
@@ -56,6 +56,25 @@
     }
 }
 
+.downloadDesc {
+    background-color: #000;
+    height: 85vh;
+    padding-top: 240px;
+
+    button {
+        border: 2px solid #fff;
+        margin-right: 10px;
+    }
+}
+
+.emailObc {
+    text-decoration: none;
+    color: $copy-color;
+
+    &:hover {
+        color: $link-hover;
+    }
+}
 // Media Query
 @media (max-width: 449px) {
     .downloadDesc {
